# dfir-memdump

./: .env.example  .gitignore  HOW-TO.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/yara/: c2_frameworks.yar  credential_tools.yar  packers.yar  shellcode.yar
dfir_memdump/: __init__.py  cli.py  config.py  exceptions.py  models.py  runner.py
dfir_memdump/data/yara/: encryption_artifacts.yar
dfir_memdump/intelligence/: __init__.py  anomaly_detector.py  attck_mapper.py  c2_detector.py  chain_builder.py  encryption_keys.py  lateral_movement.py  lolbas_checker.py  mutex_checker.py  privilege_checker.py  string_extractor.py  vt_client.py  yara_engine.py
dfir_memdump/plugins/: __init__.py  bitlocker.py  cmdline.py  dlllist.py  handles.py  malfind.py  netscan.py  privileges.py  pslist.py
dfir_memdump/report/: builder.py  html_report.py  json_report.py  markdown_report.py
templates/: report.md.j2
