[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfir-memdump"
version = "1.0.0"
description = "Windows memory forensics triage tool powered by Volatility3"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["dfir", "forensics", "memory", "volatility3", "malware", "incident-response", "yara", "mitre-attck"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "volatility3>=2.7.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
yara = ["yara-python>=4.5.0"]
dev  = ["pytest>=7.0", "pytest-cov", "mypy", "ruff"]

[project.urls]
Homepage   = "https://github.com/dfarid479/dfir-memdump"
Repository = "https://github.com/dfarid479/dfir-memdump"
Issues     = "https://github.com/dfarid479/dfir-memdump/issues"

[project.scripts]
dfir-memdump = "dfir_memdump.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dfir_memdump*"]

[tool.setuptools.package-data]
"*" = ["data/yara/*.yar", "templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
